add endpoint current
