# controller/users/updateProfile.js
@@ -1,7 +1,7 @@
 const { User } = require("../../model/users");
 const bmr = require("./services/bmr");
 const ageFromDate = require("./services/ageFromDate");
-const {HttpError} = require("../../helper");
+const { HttpError } = require("../../helper");
 
 const updateProfile = async (req, res) => {
     const bodyData = req.body;
@@ -13,7 +13,7 @@ const updateProfile = async (req, res) => {
 
     const dailyCalorie = bmr(bodyData, age)
 
-    const result = await User.findByIdAndUpdate(_id, {name, bodyData, dailyCalorie,});
+    const result = await User.findByIdAndUpdate(_id, { name, bodyData, dailyCalorie });
 
     if (!result) {
         throw HttpError(404);
